Split main promise event filter into multiple filters
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -1301,9 +1301,11 @@ described in [jerry_promise_event_type_t](#jerry_promise_event_type_t).
 Possible values:
 
 - JERRY_PROMISE_EVENT_FILTER_DISABLE - Disable reporting of all events.
-- JERRY_PROMISE_EVENT_FILTER_MAIN - Enables the following events:
+- JERRY_PROMISE_EVENT_FILTER_CREATE - Enables the following event:
   - JERRY_PROMISE_EVENT_CREATE
+- JERRY_PROMISE_EVENT_FILTER_RESOLVE - Enables the following event:
   - JERRY_PROMISE_EVENT_RESOLVE
+- JERRY_PROMISE_EVENT_FILTER_REJECT - Enables the following event:
   - JERRY_PROMISE_EVENT_REJECT
 - JERRY_PROMISE_EVENT_FILTER_ERROR - Enables the following events:
   - JERRY_PROMISE_EVENT_RESOLVE_FULFILLED
@@ -6152,7 +6154,7 @@ main (void)
 {
   jerry_init (JERRY_INIT_EMPTY);
 
-  jerry_promise_set_callback (JERRY_PROMISE_EVENT_FILTER_MAIN, promise_callback, NULL);
+  jerry_promise_set_callback (JERRY_PROMISE_EVENT_FILTER_CREATE, promise_callback, NULL);
 
   const char *source_p = "var p = Promise.resolve(0)\n"
                          "p.then(function (v) { return v; })";
