--- a/docs/05.PORT-API.md
+++ b/docs/05.PORT-API.md
@@ -72,8 +72,8 @@ typedef enum
 void jerry_port_log (jerry_log_level_t level, const char *fmt, ...);
 ```
 
-The `jerry_port_print_char` is currenlty not used by the jerry-core directly.
-However, it provides a port specifc way for `jerry-ext` components to print
+The `jerry_port_print_char` is currently not used by the jerry-core directly.
+However, it provides a port specific way for `jerry-ext` components to print
 information.
 
 ```c
@@ -284,7 +284,7 @@ void
 jerry_port_print_char (char c)
 {
   putchar (c);
-} /* jerr_port_print_char */
+} /* jerry_port_print_char */
 ```
 
 ## Date
