--- a/docs/10.EXT-REFERENCE-HANDLER.md
+++ b/docs/10.EXT-REFERENCE-HANDLER.md
@@ -141,7 +141,7 @@ jerryx_has_property_str (const jerry_value_t target_object,
 - `target_object` - object on which the property name is accessed
 - `name` - property name as an UTF-8 `char*`
 - return value
-  - true, if the given property name exsits on the object
+  - true, if the given property name exists on the object
   - false, if there is no such property name or there was an error accessing the property
 
 **Example**
@@ -180,7 +180,7 @@ for this the following utility structures and methods are provided.
 Structure to define an array of properties with `name` and `value` fields which
 can be registered to a target object.
 
-The engine must be initialied before specifying the `jerry_value_t` in the struct.
+The engine must be initialized before specifying the `jerry_value_t` in the struct.
 
 
 **Prototype**
@@ -209,7 +209,7 @@ successfully registered methods.
 This must be passed for the [jerryx_release_property_entry](#jerryx_release_property_entry) method
 after the property registration.
 
-If any error occured during the property registration the `result` field of the structure
+If any error occurred during the property registration the `result` field of the structure
 must be manually released after processing the error value.
 
 **Prototype**
@@ -393,7 +393,7 @@ Release all `jerry_value_t` in a `jerryx_property_entry` array based on a previo
 and also the error value (if any) in the `jerryx_register_result` structure.
 In case of a successful registration it is safe to call this method.
 
-After the method call the `ęntries` array should not be used as all values are released.
+After the method call the `entries` array should not be used as all values are released.
 
 **Prototype**
 
@@ -403,7 +403,7 @@ jerryx_release_property_entry (const jerryx_property_entry entries[],
                                const jerryx_register_result register_result);
 ```
 
-- `entires` - array of [jerryx_property_entry](#jerryx_property_entry).
+- `entries` - array of [jerryx_property_entry](#jerryx_property_entry).
 - `register_result` - result of a previous [jerryx_set_properties](#jerryx_set_properties) call.
 
 **Example**
@@ -513,7 +513,7 @@ jerryx_handler_gc (const jerry_value_t func_obj_val, const jerry_value_t this_p,
 
 Provide a `print` implementation for scripts. The routine converts all of its
 arguments to strings and outputs them char-by-char using
-`jerry_port_print_char`. The NUL character is output as "\u0000",
+`jerry_port_print_char`. The NULL character is output as "\u0000",
 other characters are output bytewise.
 
 *Note*: This implementation does not use standard C `printf` to print its
