--- a/docs/13.DEBUGGER-TRANSPORT.md
+++ b/docs/13.DEBUGGER-TRANSPORT.md
@@ -100,7 +100,7 @@ typedef bool (*jerry_debugger_transport_receive_t) (struct jerry_debugger_transp
 
 **Summary**
 
-Add a new interface to the transporation interface chain. The interface
+Add a new interface to the transportation interface chain. The interface
 will be the first item of the interface chain.
 
 **Prototype**
@@ -111,7 +111,7 @@ void jerry_debugger_transport_add (jerry_debugger_transport_header_t *header_p,
                                    size_t receive_message_header_size, size_t max_receive_message_size);
 ```
 
-- `header_p`: header of a transporation interface.
+- `header_p`: header of a transportation interface.
 - `send_message_header_size`: size of the outgoing message header, can be 0.
 - `max_send_message_size`: maximum outgoing message size supported by the interface.
 - `receive_message_header_size`: size of the incoming message header, can be 0.
