--- a/docs/16.MIGRATION-GUIDE.md
+++ b/docs/16.MIGRATION-GUIDE.md
@@ -1,11 +1,11 @@
 # Migration guide
 
 This guide intends to describe the major changes between the JerryScript 1.0 and 2.0 versions.
-In addtion it is designed to provide a guide on how to modify the 1.0 version code to a
+In addition it is designed to provide a guide on how to modify the 1.0 version code to a
 2.0 compliant code.
 
 During the development it was important to minimize the changes in the API functions and types.
-Each API method removal or chang is described below providing a ***before*** and ***after***
+Each API method removal or change is described below providing a ***before*** and ***after***
 code example.
 For more information on the current API methods please check the [API reference](02.API-REFERENCE.md) document.
 
@@ -53,7 +53,7 @@ For more information on the current API methods please check the [API reference]
 
 ## Error manipulating functions
 
-The most important changes in the API are releated to error handling and manipulation.
+The most important changes in the API are related to error handling and manipulation.
 
 ### jerry_value_set_abort_flag
 
