Update the webpage
JerryScript-DCO-1.0-Signed-off-by: Zsolt Borbély zsborbely.u-szeged@partner.samsung.com

--- a/04.INTERNALS.md
+++ b/04.INTERNALS.md
@@ -88,7 +88,7 @@ Argument combinations are limited to the following seven forms:
 ## Literals
 
 Literals are organized into groups whose represent various literal types. Having these groups consuming less space than assigning flag bits to each literal.
-(In the followings, the mentioned ranges represent those indicies which are greater than or equal to the left side and less than the right side of the range. For example a range between `ident_end` and `literal_end` fields of the byte-code header contains those indicies, which are greater than or equal to `ident_end`
+(In the followings, the mentioned ranges represent those indices which are greater than or equal to the left side and less than the right side of the range. For example a range between `ident_end` and `literal_end` fields of the byte-code header contains those indices, which are greater than or equal to `ident_end`
 and less than `literal_end`. If `ident_end` equals to `literal_end` the range is empty.)
 
 The two major group of literals are _identifiers_ and _values_.
@@ -277,7 +277,7 @@ An object can be a conventional data object or a lexical environment object. Unl
 
 [Lexical environments](http://www.ecma-international.org/ecma-262/5.1/#sec-10.2) are implemented as objects in JerryScript, since lexical environments contains key-value pairs (called bindings) like objects. This simplifies the implementation and reduces code size.
 
-![Object/Lexicat environment structures]({{ site.github.url }}/img/ecma_object.png){: class="thumbnail center-block img-responsive" }
+![Object/Lexical environment structures]({{ site.github.url }}/img/ecma_object.png){: class="thumbnail center-block img-responsive" }
 
 The objects are represented as following structure:
 
