--- a/08.CODING-STANDARDS.md
+++ b/08.CODING-STANDARDS.md
@@ -56,7 +56,7 @@ is doing.
 
   /* not a complete sentence */
 
-  /* A bad mulitiline
+  /* A bad multiline
      comment. */
 ```
 
@@ -379,7 +379,7 @@ a = 6;
 
 b = 7;
 
-/* No newlines are allowed between control staments
+/* No newlines are allowed between control statements
  * and their code blocks. */
 
 if (a > 6)
@@ -429,7 +429,7 @@ a=b+c;
 a = b+c;
 a  +=  c  +  ( d );
 /* Introduce temporary variables or macros
- * if the expression is too long. Occures rarely.. */
+ * if the expression is too long. Occurs rarely.. */
 a = b
   + c;
 if ( a + b > 0 )
