--- a/12.EXT-REFERENCE-MODULE.md
+++ b/12.EXT-REFERENCE-MODULE.md
@@ -267,7 +267,7 @@ symbols so that they may be called explicitly from within the application.
 #define JERRYX_NATIVE_MODULE(module_name, on_resolve_cb)
 ```
 
-- `module_name` - the name of the module without quotes. This value is used as the prefix for the registration and unregistration funtions. For example, when `module_name` is `example_module`, this results in the declaration of two functions `example_module_register()` and `example_module_unregister()`. These functions are declared global if support for library constructors/destructors is absent, allowing you to call them from other parts of the code by
+- `module_name` - the name of the module without quotes. This value is used as the prefix for the registration and unregistration functions. For example, when `module_name` is `example_module`, this results in the declaration of two functions `example_module_register()` and `example_module_unregister()`. These functions are declared global if support for library constructors/destructors is absent, allowing you to call them from other parts of the code by
 first forward-declaring them.
 - `on_resolve_cb` - the function of type `jerryx_native_module_on_resolve_t` that will be called when the module needs to be
 loaded.
