--- a/15.MODULE-SYSTEM.md
+++ b/15.MODULE-SYSTEM.md
@@ -17,7 +17,7 @@ Embedders wishing to use native builtin modules with ES6 imports can use the [Po
 ## General
 
 If a script contains import statements, then JerryScript will open and evaluate the the referenced modules before the main script runs, resolving and creating bindings for the referenced identifiers in the process.
-It is not necessary to use any specific filename extensions for modules, JerryScript will try to open the given file paths as they are, but will try to normalize them before doing so. The exact normalization process is dependant on the port implementation provided. It is the user's responsibility to verify that the given files are valid EcmaScript modules.
+It is not necessary to use any specific filename extensions for modules, JerryScript will try to open the given file paths as they are, but will try to normalize them before doing so. The exact normalization process is dependant on the port implementation provided. It is the user's responsibility to verify that the given files are valid ECMAScript modules.
 
 main.js
 
@@ -86,7 +86,7 @@ export var version = "1.0 (e92ae0fb)";
 
 ```js
 // module_2.js
-var featureName = "EcmaScript modules";
+var featureName = "ECMAScript modules";
 var year = 2018;
 
 export function getFeatureDetails() {
@@ -96,7 +96,7 @@ export function getFeatureDetails() {
 
 ### Module namespace import statements
 
-A module namespace object can be imported. In this case the local binding will contain an object holding the exported values of the module, including local exports and all indirect exports. Ambiguous exported names are exluded from the namespace object.
+A module namespace object can be imported. In this case the local binding will contain an object holding the exported values of the module, including local exports and all indirect exports. Ambiguous exported names are excluded from the namespace object.
 
 ```js
 import * as module from './module.js';
